# amd-sev-snp-attestation-sdk

./: .gitignore  .gitmodules  README.md
sev-snp/: Cargo.toml  README.md
sev-snp/examples/: attestation.rs  key.rs
sev-snp/src/: certs.rs  cpu.rs  device.rs  error.rs  kds.rs  lib.rs  utils.rs  verifier.rs
sev-snp/src/device/: hyperv.rs  kvm.rs  mod.rs
zk/common/guest-program-lib/: Cargo.toml
zk/common/sev-snp-lib/src/: attestation.rs  lib.rs  types.rs  verify.rs
zk/common/tpm-lib/: Cargo.toml
zk/common/tpm-lib/src/: lib.rs  tpm.rs
zk/common/x509-verifier-rust-crypto/: Cargo.toml
zk/common/x509-verifier-rust-crypto/src/: constants.rs  lib.rs  sig.rs
zk/contracts/: foundry.toml
zk/contracts/broadcast/Configure.s.sol/1398243/: configureZk-latest.json  run-1729499513.json  run-1732606314.json  run-1732764627.json
zk/contracts/broadcast/Deploy.s.sol/1398243/: run-1729499146.json  run-1729514501.json  run-1732606000.json
zk/contracts/script/: Configure.s.sol  Deploy.s.sol
zk/contracts/src/: KDS.sol  SEVAgentAttestation.sol
zk/contracts/src/bases/: KDSBase.sol
zk/contracts/src/types/: Structs.sol  TpmTypes.sol
zk/contracts/test/: SEVAgentTest.t.sol  SuccinctGroth16Setup.sol  TestSetup.sol
zk/risc0/data/: output.json
zk/risc0/sev-agent-verifier/: .gitignore  Cargo.toml  README.md
zk/risc0/sev-agent-verifier/contracts/: foundry.toml
zk/risc0/sev-agent-verifier/contracts/broadcast/Configure.s.sol/1398243/: configureRootPubkey-latest.json
zk/risc0/sev-agent-verifier/contracts/script/: Configure.s.sol  Deploy.s.sol
zk/risc0/sev-agent-verifier/contracts/src/: SEVAgentAttestation.sol
zk/risc0/sev-agent-verifier/contracts/src/mock/: MockKDS.sol
zk/risc0/sev-agent-verifier/contracts/src/types/: SevSnpTypes.sol  Structs.sol
zk/risc0/sev-agent-verifier/contracts/test/: SEVAgentTest.t.sol  TestSetup.sol
zk/risc0/sev-agent-verifier/host/: Cargo.toml
zk/risc0/sev-agent-verifier/host/artifacts/: KDS.json  MockKDS.json  RiscZeroGroth16Verifier.json  SEVAgentAttestation.json
zk/risc0/sev-agent-verifier/host/src/: constants.rs  lib.rs
zk/risc0/sev-agent-verifier/host/src/chain/: mod.rs
zk/risc0/sev-agent-verifier/host/src/chain/kds/: mod.rs  read.rs  write.rs
zk/risc0/sev-agent-verifier/host/src/code/: mod.rs  x509.rs
zk/risc0/sev-agent-verifier/host/src/utils/: deserializer.rs  mod.rs  parser.rs  serializer.rs
zk/risc0/sev-agent-verifier/host/src/utils/certs/: kds.rs  mod.rs  tpm.rs
zk/risc0/sev-agent-verifier/methods/guest/: Cargo.toml
zk/risc0/sev-agent-verifier/methods/guest/src/: lib.rs  main.rs  utils.rs
zk/risc0/sev-snp-lib/: Cargo.toml
zk/risc0/sev-snp-lib/src/: attestation.rs  lib.rs  types.rs  verify.rs
zk/risc0/tpm-lib/src/: constants.rs  lib.rs  tpm.rs
zk/sp1/: .env.example  Cargo.toml  README.md
zk/sp1/data/sev/: vcek.pem
zk/sp1/elf/: riscv32im-succinct-zkvm-elf
zk/sp1/program/: Cargo.toml
zk/sp1/program/src/: main.rs
zk/sp1/script/: Cargo.toml
