[package]
name = "sev-snp"
version = "0.1.0"
edition = "2021"
description = "Automata AMD SEV-SNP library"
readme = "README.md"
keywords = ["amd", "sev", "sev-snp", "snp"]

[lib]
name = "sev_snp"
crate-type = ["rlib", "cdylib"]

[features]
clib = ["dep:once_cell"]

[build-dependencies]
cbindgen = "0.24.0"

[profile.release]
lto = true

[dependencies]
sev = { version = "=3.1.1", default-features = false, features = ['openssl','snp'] }
openssl = { version = "^0.10", features = ["vendored"] }
tss-esapi = "7.2"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "^1.2.1"
rand = "0.8.5"
x509-parser = { version="^0.14", features=["verify"] }
asn1-rs = "0.5.2"
hex = "0.4"
ureq = "2.9.7"
sysinfo = "0.30.13"
once_cell = { version = "1.19.0", optional = true }