[package]
name = "guest-program-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sev-snp-lib = { path = "../sev-snp-lib" }
tpm-lib = { path = "../tpm-lib" }
x509-verifier-rust-crypto = { path = "../x509-verifier-rust-crypto" }

base64 = "0.22.1"
serde = "1.0"
serde_json = "1.0"
