[package]
name = "tpm-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
sha1 = "0.10.6"
p256 = "0.13.2"
serde = { version = "1.0.210", features = ["derive"]}
serde_json = "1.0.128"
hex = "0.4.3"
x509-parser = "0.16.0"
sha2 = "0.10.8"
