[package]
name = "x509-verifier-rust-crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
p384 = { version = "0.13.0" }
sha2 = { version = "0.10.8", features = ['oid'] }
p256 = "0.13.2"
rsa = "0.9.6"
x509-parser = "0.16.0"
oid = "0.2.1"
hex = "0.4.3"
