[package]
name = "sev_agent_verifier_guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "=1.0.5", default-features = false, features = ['std'] }
sev-snp-lib = { path = "../../../sev-snp-lib" }
tpm-lib = { path = "../../../tpm-lib" }
hex = "0.4.3"
x509-verifier-rust-crypto = { path = "../../../x509-verifier-rust-crypto" }