[package]
name = "sev_agent_verifier_guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "=1.0.5", default-features = false, features = ['std'] }
hex = "0.4.3"

guest-program-lib = { path = "../../../../common/guest-program-lib" }
sev-snp-lib = { path = "../../../../common/sev-snp-lib" }
tpm-lib = { path = "../../../../common/tpm-lib" }
x509-verifier-rust-crypto = { path = "../../../../common/x509-verifier-rust-crypto" }